chore: add 12bit link to footer

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -42,6 +42,7 @@
         <p>Code is poetry</p>
         <nav>
             <a href="/tags/index.html">tags</a>
+            <a href="https://12bit.vn" target="_blank">12bit.vn</a>
             <a href="https://v1.thien.dev" target="_blank">v1</a>
             <a href="https://v2.thien.dev" target="_blank">v2</a>
             <a href="https://v3.thien.dev" target="_blank">v3</a>
