feat: add quicklink

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -48,7 +48,12 @@
             <a href="https://v3.thien.dev" target="_blank">v3</a>
         </nav>
     </footer>
-
+  
+    <script src="https://unpkg.com/quicklink@2.2.0/dist/quicklink.umd.js"></script>
+    <script>
+      quicklink.listen()
+    </script>
+    
     {{template "extra_footer" .}}
 </body>
 
