chore: update contact email

--- a/theme/index.html
+++ b/theme/index.html
@@ -16,7 +16,7 @@
             too.</p>
         <p>This is my personal website where I share some information about me, store all my notes. There are no
             tracking, no
-            comments, and no ads. If you have any feedbacks, feel free to reach me via tattthien.contact [a] gmail.com
+            comments, and no ads. If you have any feedbacks, feel free to reach me via <code>me [a] thien.dev</code>
         </p>
     </section>
     <section id="posts" class="container">
