feat: add meta tags

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -19,6 +19,24 @@
 
     <meta name="description" content="{{.Site.Description}}">
 
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="{{ .Site.Title }}">
+    <meta itemprop="description" content="{{ .Site.Description }}">
+    <meta itemprop="image" content="/img/og-image.webp">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="{{ .Site.BaseURL }}">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{ .Site.Title }}">
+    <meta property="og:description" content="{{ .Site.Description }}">
+    <meta property="og:image" content="/img/og-image.webp">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{ .Site.Title }}">
+    <meta name="twitter:description" content="{{ .Site.Description }}">
+    <meta name="twitter:image" content="/img/og-image.webp">
+
     {{template "extra_head" .}}
 </head>
 
