--- a/theme/single.html
+++ b/theme/single.html
@@ -3,7 +3,7 @@
 {{end}}
 {{define "content"}}
 <main class="container">
-    <a href="/" class="font-mono">cd $HOME</a>
+    <a href="/" class="font-mono">> cd $HOME</a>
     <div>
         <h1>{{.Post.Title}}</h1>
         <div>{{safe_html .Post.Content}}</div>
