--- a/theme/index.html
+++ b/theme/index.html
@@ -3,12 +3,7 @@
 <main>
     <section id="hero" class="container">
         <a href="/">
-            <svg width="40" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="64" height="64" fill="#151515" />
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M12 12H25.3333H38.6667V25.3333V38.6667H52V52H38.6667H25.3333V38.6667V25.3333H12V12Z"
-                    fill="white" />
-            </svg>
+          <img src="/img/gopher-512.png" atl="gopher" style="width: 70px; height: auto;" /> 
         </a>
 
         <h1>Hey, I'm Thien</h1>
