chore: change logo

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -46,7 +46,7 @@
     {{if ne .IsHome true}}
     <div class="container-fluid">
         <a href="/" class="logo">
-          <img src="/img/gopher-512.png" atl="gopher" style="width: 50px; height: auto;" /> 
+          <img src="/img/avatar.jpg" atl="gopher" style="width: 50px; height: auto; border-radius: 0.75rem;" /> 
         </a>
     </div>
     {{end}}
