--- a/theme/index.html
+++ b/theme/index.html
@@ -3,7 +3,7 @@
 <main>
     <section id="hero" class="container">
         <a href="/">
-          <img src="/img/gopher-512.png" atl="gopher" style="width: 70px; height: auto;" /> 
+          <img src="/img/avatar.jpg" atl="gopher" style="width: 70px; height: auto; border-radius: 1rem;" /> 
         </a>
 
         <h1>Hey, I'm Thien</h1>
