chore: change font to Work Sans

--- a/theme/index.html
+++ b/theme/index.html
@@ -14,7 +14,7 @@
             too.</p>
         <p>This is my personal website where I share some information about me, store all my notes. There are no
             tracking, no
-            comments, and no ads. If you have any feedbacks, feel free to reach me via <code>me [a] thien.dev</code>
+            comments, and no ads.
         </p>
     </section>
     <section id="posts" class="container">
