style: change outline style

--- a/theme/index.html
+++ b/theme/index.html
@@ -2,7 +2,7 @@
 {{define "content"}}
 <main>
     <section id="hero" class="container">
-        <a href="/">
+        <a href="/" style="font-size: 0;">
           <img src="/img/avatar.jpg" atl="gopher" style="width: 70px; height: auto; border-radius: 1rem;" /> 
         </a>
 
