chore: add link to footer

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -59,6 +59,7 @@
             <a href="/tags/index.html">tags</a>
             <a href="/rss.xml">rss</a>
             <a href="https://12bit.vn" target="_blank">12bit.vn</a>
+            <a href="https://github.com/tatthien/giraffe" target="_blank">giraffe</a>
         </nav>
     </footer>
 
