--- a/theme/index.html
+++ b/theme/index.html
@@ -8,6 +8,7 @@
       </a>
     </div>
     <h1>Hey, I'm Thien</h1>
+    <p>Welcome to my space on the internet!</p>
     <p>I'm a software developer, a Christian, a husband & a father.</p>
     <p>You can follow me on <a href="https://twitter.com/thisisthien" target="_blank">Twitter</a>, see my code
     on <a href="https://github.com/tatthien" target="_blank">Github</a>. I occasionally <a
