--- a/theme/index.html
+++ b/theme/index.html
@@ -2,18 +2,10 @@
 {{define "content"}}
 <main>
   <section id="hero" class="container">
-    <div class="py-4">
-      <a href="/" style="font-size: 0;" class="">
-        <img src="/img/avatar.jpg" atl="gopher" style="width: 70px; height: auto; border-radius: 1rem;" /> 
-      </a>
-    </div>
     <h1>Hey, I'm Thien</h1>
     <p>Welcome to my space on the internet!</p>
     <p>I'm a software developer, a Christian, a husband & a father.</p>
-    <p>You can follow me on <a href="https://twitter.com/thisisthien" target="_blank">Twitter</a>, see my code
-    on <a href="https://github.com/tatthien" target="_blank">Github</a>. I occasionally <a
-                                             href="https://12bit.vn" target="_blank">blog</a>
-    too.</p>
+    <p>You can follow me on <a href="https://twitter.com/thisisthien" target="_blank">Twitter</a>, see my code on <a href="https://github.com/tatthien" target="_blank">Github</a>. I occasionally <a href="https://12bit.vn" target="_blank">blog</a> too.</p>
   </section>
 
   <section class="container">
