chore: update introduction

--- a/theme/index.html
+++ b/theme/index.html
@@ -2,19 +2,16 @@
 {{define "content"}}
 <main>
   <section id="hero" class="container">
-    <h1>Hey, I'm Thien</h1>
-    <p>Welcome to my space on the internet!</p>
-    <p>I'm a software developer, a Christian, a husband & a father.</p>
-    <p>You can follow me on <a href="https://twitter.com/thisisthien" target="_blank">Twitter</a>, see my code on <a href="https://github.com/tatthien" target="_blank">Github</a>. I occasionally <a href="https://12bit.vn" target="_blank">blog</a> too.</p>
+    <p>My name is <strong>Thien</strong> and this is my space on the world wide web where I write freely in English and Vietnamese. I'm a software developer, a Christian, a husband & a father. You can find me on <a href="https://twitter.com/thisisthien" target="_blank">Twitter</a> & <a href="https://github.com/tatthien" target="_blank">Github</a>.</p>
   </section>
 
   <section class="container">
     <div>
-      <a href="/til"><strong>Today I learned</strong></a>:
+      <a href="/til"><strong>1. Today I learned</strong></a>:
       <span class="c-gray"><em>Writing about what I learned everyday</em></span>
     </div>
     <div>
-      <a href="/posts"><strong>Posts</strong></a>:
+      <a href="/posts"><strong>2. Posts</strong></a>:
       <span class="c-gray"><em>My random thoughts, notes and short stories</em></span>
     </div>
   </section>
