chore: add link to Flat Preloader Pro

--- a/theme/index.html
+++ b/theme/index.html
@@ -15,6 +15,10 @@
       <a href="/posts"><strong>2. Posts</strong></a>:
       <span class="c-gray"><em>My random thoughts, notes and short stories</em></span>
     </div>
+    <div>
+      <a href="https://thisisthien.gumroad.com/l/flat-preloader-pro" target="_blank"><strong>3. Flat Preloader Pro</strong></a>
+      <span class="c-gray"><em>Add preloader to your WordPress sites</em></span>
+    </div>
   </section>
 </main>
 {{end}}
