feat: add landinge page for Flat Preloader

--- a/theme/index.html
+++ b/theme/index.html
@@ -16,7 +16,7 @@
       <span class="c-gray"><em>My random thoughts, notes and short stories</em></span>
     </div>
     <div>
-      <a href="https://thisisthien.gumroad.com/l/flat-preloader-pro" target="_blank"><strong>3. Flat Preloader Pro</strong></a>
+      <a href="/flat-preloader"><strong>3. Flat Preloader</strong></a>
       <span class="c-gray"><em>Add preloader to your WordPress sites</em></span>
     </div>
   </section>
