chore: add hover effect for review item

--- a/theme/flat-preloader.html
+++ b/theme/flat-preloader.html
@@ -118,7 +118,7 @@
         <h2 class="font-semibold">What people say about Flat Preloader</h2>
       </div>
       <ul class="reviews">
-        <li>
+        <li class="review animated">
           <a href="https://wordpress.org/support/topic/great-plugin-fast-and-simple/" target="_blank">
             <div class="flex items-center mb-2">
               <h4 class="mb-0 font-semibold">theotheo</h4>
@@ -144,7 +144,7 @@
             <p>Best plugin, just does what it has to do. Simple.</p>
           </a>
         </li>
-        <li>
+        <li class="review animated">
           <a href="https://wordpress.org/support/topic/best-light-weight-plugin-with-great-support/" target="_blank">
             <div class="flex items-center mb-2">
               <h4 class="mb-0 font-semibold">godwinng</h4>
@@ -170,7 +170,7 @@
             <p>Best light weight plugin with great support</p>
           </a>
         </li>
-        <li>
+        <li class="review animated">
           <a href="https://wordpress.org/support/topic/very-cool-and-perfect/" target="_blank">
             <div class="flex items-center mb-2">
               <h4 class="mb-0 font-semibold">aversus</h4>
@@ -196,7 +196,7 @@
             <p>I’ve tried others but this one is better than all of them and it works fine.</p>
           </a>
         </li>
-        <li>
+        <li class="review animated">
           <a href="https://wordpress.org/support/topic/great-plugin-27025/" target="_blank">
             <div class="flex items-center mb-2">
               <h4 class="mb-0 font-semibold">giacobojoshua</h4>
