--- a/theme/index.html
+++ b/theme/index.html
@@ -9,15 +9,15 @@
   <section class="container">
     <div>
       <a href="/til"><strong>1. Today I learned</strong></a>:
-      <span class="c-gray"><em>Writing about what I learned everyday</em></span>
+      <span class="c-gray">Writing about what I learned everyday</span>
     </div>
     <div>
       <a href="/posts"><strong>2. Posts</strong></a>:
-      <span class="c-gray"><em>My random thoughts, notes and short stories</em></span>
+      <span class="c-gray">My random thoughts, notes and short stories</span>
     </div>
     <div>
       <a href="/flat-preloader"><strong>3. Flat Preloader</strong></a>
-      <span class="c-gray"><em>Add preloader to your WordPress sites</em></span>
+      <span class="c-gray">Add preloader to your WordPress sites</span>
     </div>
   </section>
 </main>
