feat(flat-preloader): add loading screen animation

--- a/theme/flat-preloader.html
+++ b/theme/flat-preloader.html
@@ -1,4 +1,6 @@
 {{define "extra_head"}}
+<title>Flat Preloader for WordPress</title>
+<meta name="description" content="One of the best WordPress preloader plugins">
 <meta itemprop="name" content="Flat Preloader for WordPress">
 <meta itemprop="description" content="One of the best WordPress preloader plugins">
 {{end}}
@@ -19,7 +21,10 @@
         <span></span>
         <span></span>
       </div>
-      <img src="/img/flat-preloader/preview-1.jpg" alt="Preview loading screen">
+      <div class="loading-screen">
+        <div class="icon"></div>
+        <span class="text">Loading</span>
+      </div>
     </div>
     <div>
       <div class="stat-button download">
