--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -37,7 +37,7 @@
     <meta name="twitter:title" content="{{ .Site.Title }}">
     <meta name="twitter:description" content="{{ .Site.Description }}">
     <meta name="twitter:image" content="/img/og-image.webp">
-
+    <script async defer data-website-id="7a33b389-4334-4e58-882d-2d5c41adb2f5" src="https://umami.thien.dev/umami.js"></script>
     {{template "extra_head" .}}
   </head>
 
