chore: add homepage link

--- a/theme/index.html
+++ b/theme/index.html
@@ -19,6 +19,10 @@
       <a href="/flat-preloader"><strong>3. Flat Preloader</strong></a>
       <span class="c-gray">Add preloader to your WordPress sites</span>
     </div>
+    <div>
+      <a href="https://stickerbear.vn" target="_blank"><strong>4. Sticker Bear</strong></a>
+      <span class="c-gray">Making stickers with love</span>
+    </div>
   </section>
 </main>
 {{end}}
