chore: add homepage link

--- a/theme/index.html
+++ b/theme/index.html
@@ -23,6 +23,10 @@
       <a href="https://stickerbear.vn" target="_blank"><strong>4. Sticker Bear</strong></a>
       <span class="c-gray">Making stickers with love</span>
     </div>
+    <div>
+      <a href="https://12bit.vn" target="_blank"><strong>5. 12bit</strong></a>
+      <span class="c-gray">Write and share to learn</span>
+    </div>
   </section>
 </main>
 {{end}}
