docs: add link to homepage

--- a/theme/index.html
+++ b/theme/index.html
@@ -27,6 +27,10 @@
       <a href="https://12bit.vn" target="_blank"><strong>5. 12bit</strong></a>
       <span class="c-gray">Write and share to learn</span>
     </div>
+    <div>
+      <a href="https://week.thien.dev" target="_blank"><strong>6. Get Weekly</strong></a>
+      <span class="c-gray">Weekly planner for developers who love markdown</span>
+    </div>
   </section>
 </main>
 {{end}}
