chore: add font Inter var and emoji

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -59,12 +59,10 @@
       {{template "content" .}}
 
       <footer class="site-footer">
-        <div>Code is poetry</div>
         <nav>
-          <a href="/tags/index.html">tags</a>
-          <a href="/rss.xml">rss</a>
-          <a href="https://12bit.vn" target="_blank">12bit.vn</a>
-          <a href="https://github.com/tatthien/giraffe" target="_blank">giraffe</a>
+          <a href="/tags/index.html">🔖 tags</a>
+          <a href="/rss.xml">📮 rss</a>
+          <a href="https://github.com/tatthien/giraffe" target="_blank">🦒 giraffe</a>
         </nav>
       </footer>
     </div>
