--- a/theme/index.html
+++ b/theme/index.html
@@ -8,27 +8,27 @@
 
   <section class="container">
     <div>
-      <a href="/til"><strong>1. Today I learned</strong></a>:
+      <a href="/til"><strong>✏️ Today I learned</strong></a>
       <span class="c-gray">Writing about what I learned everyday</span>
     </div>
     <div>
-      <a href="/posts"><strong>2. Posts</strong></a>:
+      <a href="/posts"><strong>📝 Posts</strong></a>
       <span class="c-gray">My random thoughts, notes and short stories</span>
     </div>
     <div>
-      <a href="/flat-preloader"><strong>3. Flat Preloader</strong></a>
+      <a href="/flat-preloader"><strong>💈 Flat Preloader</strong></a>
       <span class="c-gray">Add preloader to your WordPress sites</span>
     </div>
     <div>
-      <a href="https://stickerbear.vn" target="_blank"><strong>4. Sticker Bear</strong></a>
+      <a href="https://stickerbear.vn" target="_blank"><strong>🐻 Sticker Bear</strong></a>
       <span class="c-gray">Making stickers with love</span>
     </div>
     <div>
-      <a href="https://12bit.vn" target="_blank"><strong>5. 12bit</strong></a>
+      <a href="https://12bit.vn" target="_blank"><strong>🥑 12bit</strong></a>
       <span class="c-gray">Write and share to learn</span>
     </div>
     <div>
-      <a href="https://week.thien.dev" target="_blank"><strong>6. Get Weekly</strong></a>
+      <a href="https://week.thien.dev" target="_blank"><strong>📆 Get Weekly</strong></a>
       <span class="c-gray">Weekly planner for developers who love markdown</span>
     </div>
   </section>
