docs: add link to homepage

--- a/theme/index.html
+++ b/theme/index.html
@@ -31,6 +31,10 @@
       📆 <a href="https://week.thien.dev" target="_blank" class="font-serif text-italic"><strong>Get Weekly</strong></a>
       <span class="c-gray">Weekly planner for developers who love markdown</span>
     </div>
+    <div>
+      🌱 <a href="https://thisisthien.gumroad.com/l/wp-block-mindmap" target="_blank" class="font-serif text-italic"><strong>WP Block Mindmap</strong></a>
+      <span class="c-gray">From markdown content to interactive mindmaps</span>
+    </div>
   </section>
 </main>
 {{end}}
