chore: update wp block mindmap description

--- a/theme/index.html
+++ b/theme/index.html
@@ -33,7 +33,7 @@
     </div>
     <div>
       🌱 <a href="https://thisisthien.gumroad.com/l/wp-block-mindmap" target="_blank" class="font-serif text-italic"><strong>WP Block Mindmap</strong></a>
-      <span class="c-gray">From markdown content to interactive mindmaps</span>
+      <span class="c-gray">From markdown content -> mind map</span>
     </div>
   </section>
 </main>
