style: improve flat-preloader landing page

--- a/theme/flat-preloader.html
+++ b/theme/flat-preloader.html
@@ -5,10 +5,10 @@
 <meta itemprop="description" content="One of the best WordPress preloader plugins">
 {{end}}
 {{define "content"}}
-<main>
+<main class="flat-preloader-lp">
   <div class="section text-center">
     <div class="description mb-8">
-      <h2 class="mb-0 font-semibold">Preloader plugin for WordPress</h2>
+      <h1 class="font-extrabold">Preloader plugin for WordPress</h1>
       <p class="c-gray">Enhance your site with the loading page</p>
     </div>
     <a href="https://wordpress.org/plugins/flat-preloader/" class="button animated" target="_blank">
