--- a/theme/index.html
+++ b/theme/index.html
@@ -7,6 +7,7 @@
   </section>
 
   <section class="container">
+    <h4>Featured links</h4>
     <div>
       📝 <a href="/posts" class="font-serif text-italic"><strong>Posts</strong></a>
       <span class="c-gray">My random thoughts, notes and short stories</span>
