chore: update homepage content

--- a/theme/index.html
+++ b/theme/index.html
@@ -13,7 +13,11 @@
       <span class="c-gray">Hand-crafted products for the modern web</span>
     </div>
     <div>
-      💈 <a href="/flat-preloader" class="font-serif text-italic"><strong>Flat Preloader</strong></a>
+      🥑 <a href="https://12bit.vn" target="_blank" class="font-serif text-italic"><strong>12bit</strong></a>
+      <span class="c-gray">Write and share to learn</span>
+    </div>
+    <div>
+      💈 <a href="/flat-preloader" class="font-serif text-italic"><strong>Flat Preloader Pro</strong></a>
       <span class="c-gray">Add preloader to your WordPress sites</span>
     </div>
     <div>
@@ -23,10 +27,6 @@
     <div>
       🐻 <a href="https://stickerbear.vn" target="_blank" class="font-serif text-italic"><strong>Sticker Bear</strong></a>
       <span class="c-gray">Making stickers with love</span>
-    </div>
-    <div>
-      🥑 <a href="https://12bit.vn" target="_blank" class="font-serif text-italic"><strong>12bit</strong></a>
-      <span class="c-gray">Write and share to learn</span>
     </div>
     <div>
       📆 <a href="https://week.thien.dev" target="_blank" class="font-serif text-italic"><strong>Get Weekly</strong></a>
