--- a/theme/single.html
+++ b/theme/single.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="/css/hl.css">
 {{end}}
 {{define "content"}}
-<main class="container single single">
-    <div class="mb-4">
+<main class="container single">
+    <div class="mb-8">
         <a href="/{{.Post.Type}}" class="c-gray"><- All posts</a>
     </div>
     <div>
