--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,400;0,7..72,600;0,7..72,700;1,7..72,400;1,7..72,600;1,7..72,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,400;0,7..72,600;0,7..72,700;1,7..72,400;1,7..72,600;1,7..72,700&display=swap&family=Overpass+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32.png">
 
@@ -101,24 +101,6 @@
         const theme = event.target.checked ? 'dark' : 'light'
         localStorage.setItem('theme', theme)
         reactive.theme = theme
-      })
-
-      // Insert year heading to post list
-      let year = ''
-      const postList = document.querySelector('#posts .post-list')
-      const postItems = document.querySelectorAll('#posts .post-item')
-      postItems.forEach(item => {
-        const postDate = item.querySelector('.post-date').textContent
-        itemYear = postDate.split(',')[1].trim()
-        if (year !== itemYear) {
-          year = itemYear
-          const node = document.createElement('h4')
-          node.classList.add('c-gray')
-          node.style.fontWeight = '400'
-          node.style.margin = '1.5rem 0'
-          node.textContent = year
-          postList.insertBefore(node, item)
-        }
       })
     </script>
   </body>
