--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -61,7 +61,7 @@
       {{template "content" .}}
 
       <footer class="site-footer">
-        <nav>
+        <nav class="container">
           <a href="/tags/index.html">🔖 tags</a>
           <a href="/rss.xml">📮 rss</a>
           <a href="https://github.com/tatthien/giraffe" target="_blank">🦒 giraffe</a>
