feat: command bar

--- a/theme/index.html
+++ b/theme/index.html
@@ -2,34 +2,33 @@
 {{define "content"}}
 <main>
   <section id="hero" class="container">
-    <svg width="150" height="150" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M267 368h-16v16h-16v16h-16v48h-16v64h256v-64h-16v-48h-16v-16h-16v16h-32v16h-96v-16h-16v-32Z" fill="#F0CA2C"/><path fill-rule="evenodd" clip-rule="evenodd" d="M283 368h32v16h16v16h16v16h-32v-16h-32v-32Zm64 32v-16h16v-16h32v16h-16v16h-32Z" fill="#4D4847"/><path fill-rule="evenodd" clip-rule="evenodd" d="M283 80h112v16h16v144h-16v32h-16v32h-16v64h-16v16h-16v-16h-16v-48h-32v-16h-16v-16h-16v-64h-16v-48h16v-64h16V96h16V80Z" fill="#fff"/><path fill="#000" d="M283 64h96v16h-96zM251 96h16v16h-16zM251 192h16v16h-16zM347 192h16v16h-16zM251 352h48v16h-48zM219 368h32v16h-32zM411 368h16v16h-16zM427 384h16v16h-16zM443 400h16v48h-16zM459 448h16v64h-16zM219 384h16v16h-16zM203 400h16v48h-16zM187 448h16v64h-16zM379 352h32v16h-32zM379 272h16v32h-16zM363 304h16v64h-16zM299 320h16v48h-16zM395 240h16v16h-16z"/><path fill="#000" d="M395 240h16v32h-16zM411 208h16v16h-16z"/><path fill="#000" d="M411 208h16v16h-16z"/><path fill="#000" d="M411 176h16v64h-16zM427 176h16v16h-16z"/><path fill="#000" d="M427 176h16v48h-16zM267 80h16v16h-16zM395 96h16v16h-16zM379 80h16v16h-16zM411 112h16v48h-16zM235 112h16v48h-16zM283 176h16v80h-16zM235 240h16v48h-16zM315 176h16v48h-16zM379 176h16v48h-16zM331 224h48v16h-48zM219 176h16v48h-16z"/><path fill="#000" d="M219 176h16v48h-16zM219 160h208v16H219zM235 224h64v16h-64zM299 240h16v16h-16zM251 288h16v16h-16zM267 304h16v16h-16zM315 368h16v16h-16zM347 368h16v16h-16zM331 384h16v16h-16zM395 368h16v16h-16zM379 384h32v16h-32zM347 400h32v16h-32zM331 416h16v16h-16zM315 416h16v16h-16zM299 400h16v16h-16zM299 416h16v16h-16zM283 400h16v16h-16zM267 368h16v32h-16z"/><path fill="#fff" d="M299 432h16v48h-16zM331 432h16v32h-16zM347 464h16v32h-16z"/><path fill="#000" d="M283 320h80v16h-80zM283 272h48v16h-48zM331 256h16v16h-16z"/><path fill="#EE8531" d="M235 416h16v48h-16zM219 464h16v48h-16z"/><path fill="#EE8531" d="M235 416h16v48h-16z"/><path fill="#EA9D31" d="M251 432h16v32h-16zM299 480h16v16h-16zM347 496h16v16h-16zM363 464h16v32h-16zM347 416h16v48h-16zM379 400h16v16h-16zM363 416h16v16h-16zM395 400h16v16h-16zM267 400h16v16h-16zM411 384h16v16h-16z"/><path fill="#EE8531" d="M219 464h16v48h-16z"/><path fill="#EA9D31" d="M235 464h16v48h-16zM251 496h16v16h-16z"/><path fill="#EE8531" d="M395 416h16v48h-16zM411 464h16v48h-16z"/><path fill="#EA9D31" d="M395 464h16v48h-16z"/><path fill="#3A3535" d="M283 368h16v32h-16zM363 368h16v16h-16z"/><path fill="#000" d="M96 128h64v16H96zM176 144h16v16h-16zM160 128h16v16h-16zM160 208h16v16h-16zM144 224h16v16h-16zM144 240h16v16h-16zM112 240h16v16h-16zM64 224h48v16H64zM32 224h16v16H32zM16 208h16v16H16zM48 224h16v16H48zM16 144h16v64H16zM32 128h64v16H32zM128 240h16v16h-16zM144 256h16v16h-16zM160 256h16v16h-16zM176 160h16v48h-16z"/><path fill-rule="evenodd" clip-rule="evenodd" d="M32 144h144v64h-16v16h-16v16h-32v-16H32v-80Z" fill="#fff"/><path fill-rule="evenodd" clip-rule="evenodd" d="M96 167h16v8H96v-8Zm0 24v-16h-8v16h8Zm8 0h-8v8h24v-8h-8v-8h8v-8h-8v8h-8v8ZM56 159v8h16v8H56v24h-8v-40h8Zm16 16h8v24h-8v-24ZM152 167h8v32h-8v-8h-16v-8h16v-16Zm-16 16h-8v-16h8v16Zm16 16v8h-24v-8h24Z" fill="#000"/></svg>
-    <p>My name is <strong class="font-serif text-italic">Thien</strong>. This is my space on the world wide web where I write freely in <a href="/tags/en.html" class="text-italic font-serif">English</a> and <a href="/tags/vi.html" class="text-italic font-serif">Vietnamese</a>. I'm a developer who love making things for the modern web, a Christian, a husband & a father. You can find me on <a href="https://twitter.com/hey_thien" target="_blank" class="text-italic font-serif">Twitter</a> & <a href="https://github.com/tatthien" target="_blank" class="text-italic font-serif">Github</a>.</p>
+    <p>Hi! I'm <strong class="font-serif text-italic">Thien</strong>. Welcome to my space on the internet. I'm a software engineer who enjoys making products for the modern web. You can find me on <a href="https://twitter.com/hey_thien" target="_blank" class="text-italic font-serif"><strong>Twitter</strong></a> & <a href="https://github.com/tatthien" target="_blank" class="text-italic font-serif"><strong>GitHub</strong></a>. I occasionally <a href="/posts" class="text-italic font-serif"><strong>write</strong></a> about thoughts, technical notes, and short stories.</p>
   </section>
 
   <section class="container">
     <h4>Featured links</h4>
     <div>
-    ✂️ <a href="https://12-px.com" class="font-serif text-italic" target="_blank"><strong>12-px.com</strong></a>
+      <a href="https://12-px.com" class="font-serif text-italic" target="_blank"><strong>12-px.com</strong></a>
       <span class="c-gray">Hand-crafted products for the modern web</span>
     </div>
     <div>
-      🥑 <a href="https://12bit.vn" target="_blank" class="font-serif text-italic"><strong>12bit</strong></a>
+      <a href="https://12bit.vn" target="_blank" class="font-serif text-italic"><strong>12bit</strong></a>
       <span class="c-gray">Write and share to learn</span>
     </div>
     <div>
-      💈 <a href="/flat-preloader" class="font-serif text-italic"><strong>Flat Preloader Pro</strong></a>
+      <a href="/flat-preloader" class="font-serif text-italic"><strong>Flat Preloader Pro</strong></a>
       <span class="c-gray">Add preloader to your WordPress sites</span>
     </div>
     <div>
-      🌱 <a href="https://thisisthien.gumroad.com/l/wp-block-mindmap" target="_blank" class="font-serif text-italic"><strong>WP Block Mindmap</strong></a>
+      <a href="https://thisisthien.gumroad.com/l/wp-block-mindmap" target="_blank" class="font-serif text-italic"><strong>WP Block Mindmap</strong></a>
       <span class="c-gray">From markdown content -> mind map</span>
     </div>
     <div>
-      🐻 <a href="https://stickerbear.vn" target="_blank" class="font-serif text-italic"><strong>Sticker Bear</strong></a>
+      <a href="https://stickerbear.vn" target="_blank" class="font-serif text-italic"><strong>Sticker Bear</strong></a>
       <span class="c-gray">Making stickers with love</span>
     </div>
     <div>
-      📆 <a href="https://week.thien.dev" target="_blank" class="font-serif text-italic"><strong>Get Weekly</strong></a>
+      <a href="https://week.thien.dev" target="_blank" class="font-serif text-italic"><strong>Get Weekly</strong></a>
       <span class="c-gray">Weekly planner for developers who love markdown</span>
     </div>
   </section>
