--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -40,11 +40,18 @@
 
   <body>
     <div class="_giraffe">
-      <div class="site-header">
+      <div class="site-header container">
         <a href="/">> thien.dev</a>
         <div class="flex items-center">
           <nav class="site-header-nav">
             <a href="/posts">Posts</a>
+            <button class="kbar-button">
+              <span class="kbar-button-placeholder">Search</span>
+              <span class="kbar-button-keys">
+                <span class="kbar-button-key">⌘</span>
+                <span class="kbar-button-key">K</span>
+              </span>
+            </button>
           </nav>
           <label for="theme" class="theme-switch-button">
             <input type="checkbox" id="theme">
@@ -67,15 +74,21 @@
           <a href="https://github.com/tatthien/giraffe" target="_blank">🦒 giraffe</a>
         </nav>
       </footer>
+      <ninja-keys 
+        hideBreadcrumbs
+      ></ninja-keys>
     </div>
 
     {{template "extra_footer" .}}
+    <!-- Quicklink -->
     <script src="https://unpkg.com/quicklink@2.2.0/dist/quicklink.umd.js"></script>
+    <script type="module" src="https://unpkg.com/ninja-keys?module"></script>
+    
     <script>
+      // Quicklink
       quicklink.listen()
-    </script>
 
-    <script>
+      // Theme
       const checkboxElm = document.getElementById('theme')
 
       const handler = {
@@ -84,6 +97,8 @@
         },
         set(target, prop, value, receiver) {
           if (prop === 'theme' && ['system', 'light', 'dark'].includes(value)) {
+            localStorage.setItem('theme', value)
+            checkboxElm.checked = value === 'dark'
             document.documentElement.setAttribute('data-theme', value)
           }
           return Reflect.set(...arguments)
@@ -99,9 +114,90 @@
 
       checkboxElm.addEventListener('change', (event) => {
         const theme = event.target.checked ? 'dark' : 'light'
-        localStorage.setItem('theme', theme)
         reactive.theme = theme
       })
+
+      // Command bar
+      const ninja = document.querySelector('ninja-keys');
+      document.querySelector('.kbar-button').addEventListener('click', () => { ninja.open() })
+      ninja.data = [
+        {
+          id: 'Home',
+          title: 'Homepage',
+          section: 'Navigation',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><path d="M152,208V160a8,8,0,0,0-8-8H112a8,8,0,0,0-8,8v48a8,8,0,0,1-8,8H48a8,8,0,0,1-8-8V115.5a8.3,8.3,0,0,1,2.6-5.9l80-72.7a8,8,0,0,1,10.8,0l80,72.7a8.3,8.3,0,0,1,2.6,5.9V208a8,8,0,0,1-8,8H160A8,8,0,0,1,152,208Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path></svg>',
+          handler: () => {
+            window.location.href = '/'
+          },
+        },
+        {
+          id: 'Posts',
+          title: 'Posts',
+          section: 'Navigation',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><line x1="96" y1="96" x2="160" y2="96" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="96" y1="128" x2="160" y2="128" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="96" y1="160" x2="128" y2="160" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><path d="M156.7,216H48a8,8,0,0,1-8-8V48a8,8,0,0,1,8-8H208a8,8,0,0,1,8,8V156.7a7.9,7.9,0,0,1-2.3,5.6l-51.4,51.4A7.9,7.9,0,0,1,156.7,216Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path><polyline points="215.3 160 160 160 160 215.3" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></polyline></svg>',
+          handler: () => {
+            window.location.href = '/posts'
+          },
+        },
+        {
+          id: 'Tags',
+          title: 'Tags',
+          section: 'Navigation',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><path d="M122.7,25.9,42,42,25.9,122.7a8,8,0,0,0,2.2,7.2L132.5,234.3a7.9,7.9,0,0,0,11.3,0l90.5-90.5a7.9,7.9,0,0,0,0-11.3L129.9,28.1A8,8,0,0,0,122.7,25.9Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path><circle cx="84" cy="84" r="12"></circle></svg>',
+          handler: () => {
+            window.location.href = '/tags'
+          },
+        },
+        {
+          id: 'Twitter',
+          title: 'Twitter',
+          section: 'Social',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><path d="M128,88c0-22,18.5-40.3,40.5-40a40,40,0,0,1,36.2,24H240l-32.3,32.3A127.9,127.9,0,0,1,80,224c-32,0-40-12-40-12s32-12,48-36c0,0-64-32-48-120,0,0,40,40,88,48Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path></svg>',
+          handler: () => {
+            window.location.href = '/'
+          },
+        },
+        {
+          id: 'GitHub',
+          title: 'GitHub',
+          section: 'Social',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><path d="M84,240a23.9,23.9,0,0,0,24-24V168" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path><path d="M172,240a23.9,23.9,0,0,1-24-24V168" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path><path d="M152,168h16a23.9,23.9,0,0,1,24,24v8a23.9,23.9,0,0,0,24,24" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path><path d="M104,168H88a23.9,23.9,0,0,0-24,24v8a23.9,23.9,0,0,1-24,24" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path><path d="M111.8,64A52,52,0,0,0,68,40a52,52,0,0,0-3.5,44.7A49.3,49.3,0,0,0,56,112v8a48,48,0,0,0,48,48h48a48,48,0,0,0,48-48v-8a49.3,49.3,0,0,0-8.5-27.3A52,52,0,0,0,188,40a52,52,0,0,0-43.8,24Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path></svg>',
+          handler: () => {
+            window.location.href = '/'
+          },
+        },
+        {
+          id: 'Theme',
+          title: 'Change theme...',
+          children: ['Light Theme', 'Dark Theme', 'System Theme'],
+          section: 'Preferences',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><path d="M221.6,149.4a96.2,96.2,0,0,0,2.4-22.2c-.4-52.9-44.2-95.7-97-95.2A96,96,0,0,0,96,218.5a23.9,23.9,0,0,0,32-22.6V192a23.9,23.9,0,0,1,24-24h46.2A24,24,0,0,0,221.6,149.4Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path><circle cx="128" cy="76" r="12"></circle><circle cx="83" cy="102" r="12"></circle><circle cx="83" cy="154" r="12"></circle><circle cx="173" cy="102" r="12"></circle></svg>',
+          handler: () => {
+            // open menu if closed. Because you can open directly that menu from it's hotkey
+            ninja.open({ parent: 'Theme' });
+            // if menu opened that prevent it from closing on select that action, no need if you don't have child actions
+            return {keepOpen: true};
+          },
+        },
+        {
+          id: 'Light Theme',
+          title: 'Light',
+          parent: 'Theme',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><circle cx="128" cy="128" r="60" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></circle><line x1="128" y1="36" x2="128" y2="16" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="62.9" y1="62.9" x2="48.8" y2="48.8" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="36" y1="128" x2="16" y2="128" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="62.9" y1="193.1" x2="48.8" y2="207.2" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="128" y1="220" x2="128" y2="240" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="193.1" y1="193.1" x2="207.2" y2="207.2" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="220" y1="128" x2="240" y2="128" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line><line x1="193.1" y1="62.9" x2="207.2" y2="48.8" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></line></svg>',
+          handler: () => {
+            reactive.theme = 'light'
+          },
+        },
+        {
+          id: 'Dark Theme',
+          title: 'Dark',
+          parent: 'Theme',
+          icon: '<svg xmlns="http://www.w3.org/2000/svg" style="margin-right: .25rem" width="16" height="16" fill="#000000" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"></rect><path d="M216.7,152.6A91.9,91.9,0,0,1,103.4,39.3h0A92,92,0,1,0,216.7,152.6Z" fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="16"></path></svg>',
+          handler: () => {
+            reactive.theme = 'dark'
+          },
+        },
+      ];
     </script>
   </body>
 
