feat: add resume

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -45,6 +45,7 @@
         <div class="flex items-center">
           <nav class="site-header-nav">
             <a href="/posts">Posts</a>
+            <a href="/resume.pdf">Resume</a>
             <button class="kbar-button">
               <span class="kbar-button-placeholder">Search</span>
               <span class="kbar-button-keys">
