chore: add MyWeek to homepage

--- a/theme/index.html
+++ b/theme/index.html
@@ -8,6 +8,10 @@
   <section class="container">
     <h4>Featured links</h4>
     <div>
+      <a href="https://myweek.thien.dev" target="_blank" class="font-serif text-italic"><strong>MyWeek</strong></a>
+      <span class="c-gray">Weekly planner and to-do list app</span>
+    </div>
+    <div>
       <a href="https://12-px.com" class="font-serif text-italic" target="_blank"><strong>12-px.com</strong></a>
       <span class="c-gray">Hand-crafted products for the modern web</span>
     </div>
@@ -26,10 +30,6 @@
     <div>
       <a href="https://stickerbear.vn" target="_blank" class="font-serif text-italic"><strong>Sticker Bear</strong></a>
       <span class="c-gray">Making stickers with love</span>
-    </div>
-    <div>
-      <a href="https://week.thien.dev" target="_blank" class="font-serif text-italic"><strong>Get Weekly</strong></a>
-      <span class="c-gray">Weekly planner for developers who love markdown</span>
     </div>
   </section>
 </main>
