chore: add Vercel Analytics

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -135,6 +135,7 @@
     {{template "extra_footer" .}}
     <script src="https://unpkg.com/quicklink@2.2.0/dist/quicklink.umd.js"></script>
     <script type="module" src="https://unpkg.com/ninja-keys?module"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <script id="giraffe-global">
       var __GIRAFFE__ = {
         config: {{ .Site }}
