docs: add about page

--- a/theme/common/base.html
+++ b/theme/common/base.html
@@ -117,6 +117,7 @@
         <nav class="container">
           <a href="/tags/index.html">🔖 tags</a>
           <a href="/rss.xml">📮 rss</a>
+          <a href="/pages/about-me.html">💡 about</a>
           <a href="https://github.com/tatthien/giraffe" target="_blank"
             >🦒 giraffe</a
           >
