chore: use IBM Plex Sans

--- a/theme/index.html
+++ b/theme/index.html
@@ -2,23 +2,20 @@
 <main>
   <section id="hero" class="container">
     <p>
-      Hi! I'm <strong class="font-serif text-italic">Thien</strong>. Welcome to
-      my space on the internet. I'm a software engineer who enjoys making
-      products for the modern web. You can find me on
+      Hi! I'm <strong class="text-italic">Thien</strong>. Welcome to my space on
+      the internet. I'm a software engineer who enjoys making products for the
+      modern web. You can find me on
       <a
         href="https://twitter.com/hey_thien"
         target="_blank"
-        class="text-italic font-serif"
+        class="text-italic"
         ><strong>Twitter</strong></a
       >
       &
-      <a
-        href="https://github.com/tatthien"
-        target="_blank"
-        class="text-italic font-serif"
+      <a href="https://github.com/tatthien" target="_blank" class="text-italic"
         ><strong>GitHub</strong></a
       >. I occasionally
-      <a href="/posts" class="text-italic font-serif"><strong>write</strong></a>
+      <a href="/posts" class="text-italic"><strong>write</strong></a>
       about my random thoughts, technical notes, and short stories.
     </p>
   </section>
@@ -26,46 +23,33 @@
   <section class="container">
     <h4>Featured links</h4>
     <div>
-      <a
-        href="https://myweek.thien.dev"
-        target="_blank"
-        class="font-serif text-italic"
+      <a href="https://myweek.thien.dev" target="_blank"
         ><strong>MyWeek</strong></a
       >
       <span class="c-gray">Weekly planner and to-do list app</span>
     </div>
     <div>
-      <a href="https://12-px.com" class="font-serif text-italic" target="_blank"
-        ><strong>12-px.com</strong></a
-      >
+      <a href="https://12-px.com" target="_blank"><strong>12-px.com</strong></a>
       <span class="c-gray">Hand-crafted products for the modern web</span>
     </div>
     <div>
-      <a href="https://12bit.vn" target="_blank" class="font-serif text-italic"
-        ><strong>12bit</strong></a
-      >
+      <a href="https://12bit.vn" target="_blank"><strong>12bit</strong></a>
       <span class="c-gray">Write and share to learn</span>
     </div>
     <div>
-      <a href="/flat-preloader" class="font-serif text-italic"
-        ><strong>Flat Preloader Pro</strong></a
-      >
+      <a href="/flat-preloader"><strong>Flat Preloader Pro</strong></a>
       <span class="c-gray">Add preloader to your WordPress sites</span>
     </div>
     <div>
       <a
         href="https://thisisthien.gumroad.com/l/wp-block-mindmap"
         target="_blank"
-        class="font-serif text-italic"
         ><strong>WP Block Mindmap</strong></a
       >
       <span class="c-gray">From markdown content -> mind map</span>
     </div>
     <div>
-      <a
-        href="https://stickerbear.vn"
-        target="_blank"
-        class="font-serif text-italic"
+      <a href="https://stickerbear.vn" target="_blank"
         ><strong>Sticker Bear</strong></a
       >
       <span class="c-gray">Making stickers with love</span>
